# PreSnapPrediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb  orpsp.ipynb  plays_designer.ipynb  plays_visualization.ipynb  route_clustering.ipynb
src/pre_snap_prediction/: create_orpsp.py  create_route_clusters.py  create_route_time.py
src/pre_snap_prediction/data/: process_data.py  process_orpsp.py  process_visualization.py
src/pre_snap_prediction/modeling/: orpsp_classification.py  route_clustering.py  route_time_regression.py
src/pre_snap_prediction/plays_designer/: app.py  callbacks.py  default_formations.json  layout.py  utils.py
src/pre_snap_prediction/plays_designer/assets/: style.css
src/pre_snap_prediction/utils/: constants.py
src/pre_snap_prediction/visualization/: field.py
